app/styles/mixins/_layout.scss
@mixin l-bottom {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
}

@mixin x-scrollable {
  > .scrollable-body {
    background-color: $wqxrdarkdarkblue;
    overflow-x: scroll;
    white-space: nowrap;
    // 35% is with width of the gradient
    padding: 5px 35% 5px 18px;
    -webkit-overflow-scrolling: touch;
  }

  &:after {
    content: '';
    pointer-events: none;
    display: block;
    position: absolute;
    right: 0;
    top: 0;
    height: 100%;
    width: 15%;
    background-image: linear-gradient(to right, rgba(0, 100, 180, 0.0), $wqxrdarkblue);
  }
}

